Kerjain sikit ajaa

--- a/admin/templates/network.html
+++ b/admin/templates/network.html
@@ -15,7 +15,7 @@
         <div class="sidebar">
             <div class="admin-profile">
                 <div class="profile-image">
-                    <img src="https://via.placeholder.com/80x80/8B4513/FFFFFF?text=Admin" alt="Admin Profile">
+                    <img src="/static/image/victim-profile.png" alt="Admin Profile">
                 </div>
                 <h2>User 1</h2>
             </div>
@@ -31,7 +31,7 @@
             
             <div class="logout-section">
                 <a href="#" class="logout-btn">
-                    <img src="/admin/static/image/logout-icon.png" alt="Logout Icon" class="logout-icon">
+                    <img src="/static/image/logout-icon.png" alt="Logout Icon" class="logout-icon">
                     Logout
                 </a>
             </div>
