--- a/admin/templates/overview.html
+++ b/admin/templates/overview.html
@@ -14,7 +14,7 @@
                 <div class="avatar">
                     <div class="avatar-icon"></div>
                 </div>
-                <h2>{{ victim.username }}</h2>
+                <h2>victim 1</h2>
             </div>
             
             <nav class="sidebar-nav">
@@ -41,8 +41,8 @@
                     <div class="info-card username-card">
                         <div class="card-content">
                             <div>
-                                <div class="label">Username: {{ victim.username }}</div>
-                                <div class="label">Hostname: {{ victim.hostname }}</div>
+                                <div class="label">Username:</div>
+                                <div class="label">Hostname:</div>
                             </div>
                             <div class="card-icon">👤</div>
                         </div>
@@ -51,9 +51,9 @@
                     <div class="info-card location-card">
                         <div class="card-content">
                             <div>
-                                <div class="label">City: {{ victim.city }}</div>
-                                <div class="label">Region: {{ victim.region }}</div>
-                                <div class="label">Country: {{ victim.country }}</div>
+                                <div class="label">City:</div>
+                                <div class="label">Region:</div>
+                                <div class="label">Country:</div>
                             </div>
                             <div class="card-icon">📍</div>
                         </div>
@@ -61,7 +61,7 @@
                     
                     <div class="info-card os-card">
                         <div class="card-content">
-                            <div class="label">Operating System: {{ victim.os }}</div>
+                            <div class="label">Operating System:</div>
                             <div class="card-icon">💻</div>
                         </div>
                     </div>
@@ -69,8 +69,8 @@
                     <div class="info-card ip-card">
                         <div class="card-content">
                             <div>
-                                <div class="label">Local IP: {{ victim.local_ip }}</div>
-                                <div class="label">Public IP: Not Available</div>
+                                <div class="label">Local IP:</div>
+                                <div class="label">Public IP:</div>
                             </div>
                             <div class="card-icon">🌐</div>
                         </div>
