sikit ya ges yaa ;), tar lanjut overview

--- a/admin/templates/dashboard.html
+++ b/admin/templates/dashboard.html
@@ -12,9 +12,9 @@
             <div class="admin-profile">
                 <div class="profile-image">
                     <!-- Dynamically load profile image -->
-                    <img id="profileImage" src="{{ url_for('static', filename='uploads/' + user.profile_picture) }}" alt="Admin Profile">
+                    <img id="profileImage" src="/static/image/admin-profil.jpg" alt="Admin Profile">
                 </div>
-                <h2 id="username">{{ user.username }}</h2> <!-- Dynamically load username -->
+                <h2 id="username">admin 1</h2> <!-- Dynamically load username -->
             </div>
             
             <nav class="sidebar-nav">
