--- a/admin/static/overview.css
+++ b/admin/static/overview.css
@@ -55,6 +55,13 @@ body {
 }
 
 .nav-menu {
+    display: block;
+    padding: 15px 20px;
+    margin-bottom: 5px;
+    border-radius: 25px;
+    color: #fff;
+    text-decoration: none;
+    text-decoration: none;
     flex-grow: 1;
 }
 
