--- a/admin/templates/device.html
+++ b/admin/templates/device.html
@@ -18,15 +18,14 @@
                 </div>
                 
                 <nav class="sidebar-nav">
-                    <a class="nav-item" href="/templates/overview.html">Overview</a>
-                    <a class="nav-item active" href="/templates/device.html">Device Info</a>
-                    <a class="nav-item" href="/templates/history.html">History</a>
-                    <a class="nav-item" href="/templates/network.html">Network</a>
-                    <a class="nav-item" href="/templates/location.html">Location</a>
-                    <a class="nav-item" href="/templates/passcookies.html">Pass Cookies</a>
+                    <a class="nav-item" href="/overview">Overview</a>
+                    <a class="nav-item active" href="/device">Device Info</a>
+                    <a class="nav-item" href="/history">History</a>
+                    <a class="nav-item" href="/network">Network</a>
+                    <a class="nav-item" href="/location">Location</a>
+                    <a class="nav-item" href="/passcookies">Pass Cookies</a>
                 </nav>
                 
-                <!-- Ganti Logout dengan Back -->
                 <div class="back-section">
                     <a href="/victim" class="back-btn">
                         <i class="fas fa-arrow-left back-icon"></i>
