--- a/admin/templates/network.html
+++ b/admin/templates/network.html
@@ -19,12 +19,12 @@
             </div>
             
             <nav class="sidebar-nav">
-                <a class="nav-item" href="/overview">Overview</a>
-                <a class="nav-item" href="/device">Device Info</a>
-                <a class="nav-item" href="/history">History</a>
-                <a class="nav-item active" href="/network">Network</a>
-                <a class="nav-item" href="/location">Location</a>
-                <a class="nav-item" href="/passcookies">Pass Cookies</a>
+                <a class="nav-item" href="/overview?id={{ victim.id }}">Overview</a>
+                <a class="nav-item" href="/device?id={{ victim.id }}">Device Info</a>
+                <a class="nav-item" href="/history?id={{ victim.id }}">History</a>
+                <a class="nav-item active" href="/network?id={{ victim.id }}">Network</a>
+                <a class="nav-item" href="/location?id={{ victim.id }}">Location</a>
+                <a class="nav-item" href="/passcookies?id={{ victim.id }}">Pass Cookies</a>
             </nav>
             
             <div class="logout-section">
